--- a/HeliumBot.csproj
+++ b/HeliumBot.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="Mirai-CSharp" Version="1.0.2.2-preview.4" />
+      <PackageReference Include="RestSharp" Version="106.11.8-alpha.0.12" />
     </ItemGroup>
 
 </Project>
